tests/NormalTests/paczka1/fuzzy1/88026707.err
Error in line 2: FrzxFac0YV A99 33,9
Error in line 13: FrzxFac0YV A804 62,6
Error in line 19: XoU A99 42,5
Error in line 28: tmxjCKCU A804 24,2
Error in line 31: tmxjCKCU S340 84,1
